--- a/index.html
+++ b/index.html
@@ -111,7 +111,8 @@
     nav a {
 
         display: grid;
-        width: 100px;
+        /*width: 100px;*/
+        padding: 0 5px;
         height: 25px;
         place-items: center;
         border: 2px dotted var(--accent-color);
@@ -160,10 +161,12 @@
             </article>
             <p>For any questions, please contact us by sending an email to <a href="mailto:systemsinplaypod@gmail.com">systemsinplaypod@gmail.com</a>.<br></br>We'd love it if you checked out our show!</p>
             <nav>
+                <a href="https://podcasts.apple.com/us/podcast/systems-in-play/id1740419408">Apple</a>
                 <a href="https://open.spotify.com/show/3rkhh6175RSaO1jO1GkkCg?si=8465bf7bac334666">Spotify</a>
                 <a href="https://www.youtube.com/@SystemsInPlayPod">YouTube</a>
+                <a href="https://soundcloud.com/cj-artajo-349470231?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Soundcloud</a>
                 <a href="https://feeds.libsyn.com/486780/rss">RSS</a>
-                <!--                <a href="mailto:systemsinplaypod@gmail.com">Email</a>-->
+                <a href="">TikTok</a>
             </nav>
 <!--            <p>You can also find us on the following social media platforms:</p>-->
 <!--            <nav>-->
