--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <a href="https://www.youtube.com/@SystemsInPlayPod">YouTube</a>
                 <a href="https://soundcloud.com/cj-artajo-349470231?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing">Soundcloud</a>
                 <a href="https://feeds.libsyn.com/486780/rss">RSS</a>
-                <a href="">TikTok</a>
+                <a href="https://www.tiktok.com/@systemsinplay?is_from_webapp=1&sender_device=pc">TikTok</a>
             </nav>
 <!--            <p>You can also find us on the following social media platforms:</p>-->
 <!--            <nav>-->
