Fix bottom margin on mobile

--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         display: grid;
         grid-template-columns: auto auto auto;
         gap: 10px;
+        margin-bottom: 25px;
     }
     nav a {
 
