Add itchio link

--- a/index.html
+++ b/index.html
@@ -184,6 +184,10 @@
             <nav>
                 <a href="https://discord.gg/8tnRbJjz">Discord</a>
             </nav>
+            <p>All of our games will be available on Itch.io, come check us out!</p>
+            <nav>
+                <a href="https://systemsinplay.itch.io">Itch.io</a>
+            </nav>
             <!--            <p>You can also find us on the following social media platforms:</p>-->
             <!--            <nav>-->
             <!--                <a>TikTok</a>-->
