Update index.html discord

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </nav>
             <p>We host discussion topics, per-episode threads, and channels to show off your projects on our Discord. Come join the conversation!</p>
             <nav>
-                <a href="https://discord.gg/8tnRbJjz">Discord</a>
+                <a href="https://discord.gg/AdkQkPxa82">Discord</a>
             </nav>
             <p>All of our games will be available on Itch.io, come check us out!</p>
             <nav>
